have to use header color for grid to avoid bleedthrough

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -51,7 +51,7 @@ html, body {
   line-height: $standardFontSize + 4px;
 
   background: $brown;
-  .grid{background: $dkRed;}
+  .grid{background: $dkBrown;}
   header .header{background: $dkBrown;} 
   nav{background: rgba($dkBrownRGB,.5);}
 
